# evo-nexus

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  backup.py  docker-compose.yml  install-service.sh  pyproject.toml  scheduler.py  setup.py
.claude/agents/: canvas-designer.md  clawdia-assistant.md  oracle.md  pixel-social-media.md
.claude/skills/fin-daily-pulse/: SKILL.md
.claude/skills/fin-monthly-close-kickoff/: SKILL.md
.claude/skills/fin-weekly-report/: SKILL.md
.claude/skills/initial-setup/: SKILL.md
.claude/skills/int-github-review/: SKILL.md
.claude/skills/int-instagram/: SKILL.md
.claude/skills/int-linear-review/: SKILL.md
.claude/skills/int-linkedin/: SKILL.md
.claude/skills/int-sync-meetings/: SKILL.md
.claude/skills/prod-dashboard/: SKILL.md
.claude/skills/prod-end-of-day/: SKILL.md
.claude/skills/prod-good-morning/: SKILL.md
.claude/skills/prod-review-todoist/: SKILL.md
.claude/skills/prod-trends/: SKILL.md
.claude/skills/pulse-daily/: SKILL.md
.claude/skills/pulse-faq-sync/: SKILL.md
.claude/skills/pulse-monthly/: SKILL.md
cli/: package.json
dashboard/backend/: app.py  licensing.py  models.py
docs/: architecture.md  getting-started.md  introduction.md  llms-full.txt
docs/agents/: overview.md
docs/dashboard/: overview.md  users-and-roles.md
docs/guides/: creating-skills.md  initial-setup-skill.md  updating.md
docs/integrations/: overview.md
docs/real-world/: evolution-foundation.md
docs/reference/: env-variables.md  licensing.md
site/: index.html  package.json
(+55 files in other folders)
